syntax = "proto3";

package proto;

option go_package = "github.com/babylonlabs-io/btc-staker/proto";

message TrackedTransaction {
    // index of tracked transaction in database, first tracked transaction has index 1
    uint64 tracked_transaction_idx = 1;
    bytes staking_transaction = 2;
    string staker_address = 3;
}